--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "repository": {
+  "type": "git",
+  "url": "git@github.com:WelfBrandolf/dev-com-ad-proposals.git"
   }
 }
