--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "gh-pages --repo git@github.com:UserName/Rep.git -d build",
+    "deploy": "gh-pages --repo git@github.com:WelfBrandolf/dev-com-ad-proposals.git -d build",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
